# cicd

./: .bandit  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties
.github/workflows/: ci-cd.yml
app/: __init__.py  models.py  routes.py  service.py
tests/: __init__.py  test_routes.py  test_service.py
